Add native share to body details

--- a/src/app/body-details/body-details.component.html
+++ b/src/app/body-details/body-details.component.html
@@ -22,7 +22,7 @@
             <i class="fas fa-globe fa-lg"></i>
           </a>
           <button mat-icon-button
-                 (click)="shareShowing = !shareShowing">
+                 (click)="share()">
               <mat-icon>share</mat-icon>
           </button>
         </div>
