Add hint to search box

--- a/src/explore/explore.component.html
+++ b/src/explore/explore.component.html
@@ -6,6 +6,7 @@
               name="search" [(ngModel)]="searchQ"
               (keyup)="search(searchQ, true)"
               placeholder="Search">
+      <mat-hint align="start">Find Organizations, Events and People </mat-hint>
   </mat-form-field>
 
   <button mat-icon-button
