Improve behavior of login and logout buttons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,7 @@
     </button>
 
     <button mat-button
-            (click)="this.dataService.Logout()"
+            (click)="logout()"
             *ngIf="this.dataService.loggedIn">
         Log Out
     </button>
