--- a/src/app/mess/mess.component.css
+++ b/src/app/mess/mess.component.css
@@ -1,10 +1,11 @@
 .super-head {
-    max-width: 550px;
+    max-width: calc(550px - 16px);
+    width: calc(100% - 16px);
     text-align: center;
     font-size: 1.6em;
     padding: 0.4em 0;
     margin: 5px auto;
-    margin-bottom: 10px;
+    margin-bottom: 0.7em;
     background-color: white;
 }
 
@@ -13,16 +14,15 @@
     padding: 0;
     margin: 5px auto;
     cursor: pointer;
-    background-color: white;
     white-space: pre-wrap;
-    margin-bottom: 1.4em;
+    margin-bottom: 0.7em;
 }
 
 .mess-card-head {
-    width: 100%;
     text-align: center;
     font-size: 1.1em;
     padding: 6px 0;
+    margin: 0 8px;
 }
 
 .mess-table {
