--- a/src/app/navmenu/navmenu.component.html
+++ b/src/app/navmenu/navmenu.component.html
@@ -62,3 +62,9 @@
    mat-list-item>
     <mat-icon>event_available</mat-icon> &nbsp; Calendar
 </a>
+
+<a [routerLink]="['/map']"
+   routerLinkActive="active-link"
+   mat-list-item>
+    <mat-icon>map</mat-icon> &nbsp; Map
+</a>
