Fix styling of map

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,1 +1,4 @@
-<div id="map" class="map"></div>
+<app-xunk-spinner *ngIf="!maploaded"></app-xunk-spinner>
+<div class="main">
+  <div id="map" class="map"></div>
+</div>
