--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -1,26 +1,17 @@
-.maindiv {
-    padding: 0;
-    height: 80vh;
-    position: relative;
+.main {
     overflow: hidden;
+    width: 100%;
+    margin-top: -16px;
+    height: calc(100vh - 70px);
+}
+
+@media (max-width: 560px) {
+    .main {
+        height: calc(100vh - 56px);
+    }
 }
 
 .map {
     width: 100%;
     height: 100vh;
-  }
-
-.mainmap {
-    padding:0;
-    height: 80vh;
-}
-
-.loc {
-    width: 5px;
-    height: 5px;
-    background: yellow;
-    border: 2px solid green;
-    position: absolute;
-    border-radius: 50%;
-    cursor: pointer;
 }
