Pointer on hover, alert on click in map

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,4 +1,4 @@
 <app-xunk-spinner *ngIf="!maploaded"></app-xunk-spinner>
 <div class="main">
-  <div id="map" class="map"></div>
+  <div [style.cursor]="pointer" id="map" class="map"></div>
 </div>
