Add overlay marker on click

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -2,3 +2,5 @@
 <div class="main">
   <div [style.cursor]="pointer" id="map" class="map"></div>
 </div>
+
+<img id="marker" src="/assets/location-icon.svg">
