--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -16,3 +16,7 @@
     </mat-autocomplete>
   </mat-form-field>
 </div>
+
+<button mat-mini-fab class="search-button only-mobile">
+  <mat-icon>search</mat-icon>
+</button>
