Change explore input type to search

--- a/src/app/explore/explore.component.html
+++ b/src/app/explore/explore.component.html
@@ -2,7 +2,7 @@
 
 <div id="searchbox">
   <mat-form-field class="searchinput">
-      <input matInput
+      <input matInput type="search"
               name="search" [(ngModel)]="searchQ"
               (keyup)="search(searchQ, true)"
               placeholder="Search">
