Pseudo-fix navmenu on android chrome

--- a/src/app/navmenu/navmenu.component.css
+++ b/src/app/navmenu/navmenu.component.css
@@ -21,3 +21,10 @@
     color: #eee;
     font-size: 10pt;
 }
+
+@media (max-width: 560px) {
+    .main-menu {
+        max-height: calc(87vh - 34px);
+        overflow-y: auto;
+    }
+}
