--- a/src/app/navmenu/navmenu.component.html
+++ b/src/app/navmenu/navmenu.component.html
@@ -9,6 +9,8 @@
     </div>
 </div>
 
+<div class="main-menu">
+
 <a [routerLink]="['/feed']"
    routerLinkActive="active-link"
    mat-list-item>
@@ -51,12 +53,6 @@
     <mat-icon>rss_feed</mat-icon> &nbsp; Training Blog
 </a>
 
-<a href="https://gymkhana.iitb.ac.in/cms_new/"
-   target="_blank"
-   mat-list-item>
-    <mat-icon>message</mat-icon> &nbsp; CMS
-</a>
-
 <a [routerLink]="['/calendar']"
    routerLinkActive="active-link"
    mat-list-item>
@@ -68,3 +64,11 @@
    mat-list-item>
     <mat-icon>map</mat-icon> &nbsp; Map
 </a>
+
+<a href="https://gymkhana.iitb.ac.in/cms_new/"
+   target="_blank"
+   mat-list-item>
+    <mat-icon>message</mat-icon> &nbsp; CMS
+</a>
+
+</div>
