--- a/src/styles.css
+++ b/src/styles.css
@@ -19,6 +19,26 @@ body, .image-background {
     user-select: none;
 }
 
+/* Scrollbar */
+::-webkit-scrollbar {
+    width: 6px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: white;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: var(--primary-color);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: var(--warn-color);;
+}
+
 mat-form-field, mat-form-field * {
     -webkit-touch-callout: text;
     -webkit-tap-highlight-color: transparent;
