--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -48,6 +48,7 @@
 @media (max-width: 560px) {
     .main {
         height: calc(100vh - 56px);
+        margin-top: 0;
     }
 
     .floating-box {
