--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -2,12 +2,13 @@
     overflow: hidden;
     width: 100%;
     margin-top: -16px;
-    height: calc(100vh - 70px);
+    height: calc(100vh - 62px);
+    margin-bottom: 0;
 }
 
 .map {
     width: 100%;
-    height: 100vh;
+    height: 100%;
 }
 
 .floating-box {
