Add noopener rel

--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -22,7 +22,8 @@
           <a mat-icon-button
             *ngIf="event.website_url && event.website_url !== ''"
             [href]="event.website_url"
-            target="_blank">
+            target="_blank"
+            rel="noopener">
             <i class="fas fa-globe fa-lg"></i>
           </a>
           <button mat-icon-button
