--- a/src/app/body-details/body-details.component.html
+++ b/src/app/body-details/body-details.component.html
@@ -18,7 +18,8 @@
           <a mat-icon-button
             *ngIf="body.website_url && body.website_url !== ''"
             [href]="body.website_url"
-            target="_blank">
+            target="_blank"
+            rel="noopener">
             <i class="fas fa-globe fa-lg"></i>
           </a>
           <button mat-icon-button
