--- a/src/app/navmenu/navmenu.component.html
+++ b/src/app/navmenu/navmenu.component.html
@@ -66,6 +66,7 @@
 
 <a href="https://gymkhana.iitb.ac.in/cms_new/"
    target="_blank"
+   rel="noopener"
    mat-list-item>
     <mat-icon>message</mat-icon> &nbsp; CMS
 </a>
