--- a/src/app/news/news.component.css
+++ b/src/app/news/news.component.css
@@ -15,3 +15,13 @@ td.count {
 .react-count {
     margin-top: -2px;
 }
+
+.reaction {
+    transition: background-color 0.3s ease;
+}
+
+.react-button {
+    position:absolute;
+    bottom:6px;
+    right:6px;
+}
