--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="login-container detail-card-elem real-center mat-elevation-z3" *ngIf="!authenticating">
   <div class="heading">Login to continue</div>
-  <img src="assets/logo.png" class="login-button mat-elevation-z3 logo">
+  <img src="assets/logo.svg" class="login-button mat-elevation-z3 logo">
   <button mat-raised-button
           (click)='login()'
           color="accent"
