Add quick links

--- a/src/app/navmenu/navmenu.component.html
+++ b/src/app/navmenu/navmenu.component.html
@@ -64,11 +64,10 @@
     <mat-icon>map</mat-icon> &nbsp; Map
 </a>
 
-<a href="https://gymkhana.iitb.ac.in/cms_new/"
-   target="_blank"
-   rel="noopener"
+<a [routerLink]="['/quick-links']"
+   routerLinkActive="active-link"
    mat-list-item>
-    <mat-icon>message</mat-icon> &nbsp; CMS
+    <mat-icon>link</mat-icon> &nbsp; Quick Links
 </a>
 
 </div>
