Add temporary settings page

--- a/src/app/navmenu/navmenu.component.html
+++ b/src/app/navmenu/navmenu.component.html
@@ -70,4 +70,10 @@
     <mat-icon>link</mat-icon> &nbsp; Quick Links
 </a>
 
+<a [routerLink]="['/settings']"
+   routerLinkActive="active-link"
+   mat-list-item>
+    <mat-icon>settings</mat-icon> &nbsp; Settings
+</a>
+
 </div>
