--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -57,6 +57,7 @@
     </div>
 
     <!-- Bodies conducting the event -->
+    <mat-divider></mat-divider>
     <div>
         <app-body-card
           *ngFor="let body of event.bodies"
