--- a/src/app/body-details/body-details.component.css
+++ b/src/app/body-details/body-details.component.css
@@ -1,6 +1,7 @@
 .detail-card {
     z-index: 3;
     margin-bottom: 10px;
+    padding: 0;
 }
 
 @media (max-width: 767px) {
@@ -57,7 +58,8 @@
 }
 
 .subsection {
-    margin-bottom: 10px;
+    margin: 0;
+    margin-top: 10px;
 }
 
 .float-fixed-right-bottom {
