--- a/src/app/explore/explore.component.html
+++ b/src/app/explore/explore.component.html
@@ -19,23 +19,23 @@
 
 <div *ngIf="bodies" class="real-center">
 
-  <div *ngIf="bodies">
+  <div *ngFor="let body of bodies"
+        class="detail-card-elem mat-elevation-z2 margin-card">
       <app-body-card
-        *ngFor="let body of bodies"
         [body]="body">
       </app-body-card>
   </div>
 
-  <div *ngIf="events">
+  <div *ngFor="let event of events"
+        class="detail-card-elem mat-elevation-z2 margin-card">
     <app-event-card
-      *ngFor="let event of events"
       [event]="event">
     </app-event-card>
   </div>
 
-  <div *ngIf="users">
+  <div *ngFor="let user of users"
+        class="detail-card-elem mat-elevation-z2 margin-card">
     <app-user-card
-      *ngFor="let user of users"
       [profile]="user">
     </app-user-card>
   </div>
