--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -4,8 +4,8 @@
     *ngIf="events"
     [event]="selectedEvent">
 
-    <div class="events-list">
-        <mat-card mat-ripple class="head-card" (click)=OpenEvent(events[0])>
+    <div class="events-list mat-elevation-z2">
+        <mat-card mat-ripple class="sub-card head-card" (click)=OpenEvent(events[0])>
             <img mat-card-image [src]="events[0].image_url" alt="">
             <div> {{ events[0].name }} </div>
             <span class="subhead">{{ dataService.GetDate(events[0].start_time) }} | {{ events[0].venues_str }}</span>
