--- a/src/app/mess/mess.component.css
+++ b/src/app/mess/mess.component.css
@@ -9,6 +9,10 @@
     background-color: white;
 }
 
+.margin-card {
+    margin-bottom: 0.5em;
+}
+
 .mess-card {
     max-width: 550px;
     padding: 0;
