--- a/src/app/body-details/body-details.component.css
+++ b/src/app/body-details/body-details.component.css
@@ -50,11 +50,12 @@
 }
 
 .subtitle {
-    margin-left: 10px;
-    font-weight: bold;
-    padding-bottom: 6px;
-    color: #777;
-    font-size: 10pt;
+    margin-top: 0.8em;
+    margin-left: 1.1em;
+    margin-bottom: 0.5em;
+    padding: 0;
+    color: #666;
+    font-size: 0.9em;
 }
 
 .subsection {
