Add about component

--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -17,8 +17,8 @@
        mat-list-item target="_blank" rel="noopener">
         <mat-icon>feedback</mat-icon> &nbsp; Feedback
     </a>
-    <a href="https://github.com/wncc/IITBapp"
-       mat-list-item target="_blank" rel="noopener">
+    <a [routerLink]="['/about']"
+        mat-list-item>
         <mat-icon>info</mat-icon> &nbsp; About
     </a>
   </mat-nav-list>
