--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,50 @@
-<p>
-  about works!
-</p>
+<div class="main">
+  <div class="title">Core Developers</div>
+
+  <div class="section">
+    <div class="core-dev floating">
+      <div class="pic" id="varun"></div><br>
+      Varun Patil
+    </div>
+    <div class="core-dev floating">
+      <div class="pic" id="sajal"></div><br>
+      Sajal Narang
+    </div>
+  </div>
+
+  <div class="title">Ideation</div>
+  <div class="section">
+    <div class="sub-dev floating"><div class="pic" id="tomar"></div><br>Abhijit Tomar</div>
+    <div class="sub-dev floating"><div class="pic" id="nihal"></div><br>Nihal Singh</div>
+    <div class="sub-dev floating"><div class="pic" id="ydidwania"></div><br>Yashvardhan Didwania</div>
+    <div class="sub-dev floating"><div class="pic" id="cheeku"></div><br>Kumar Ayush</div>
+    <div class="sub-dev floating"><div class="pic" id="sarthak"></div><br>Sarthak Khandelwal</div>
+  </div>
+
+  <div class="title">Design</div>
+  <div class="section">
+    <div class="sub-dev floating"><div class="pic" id="soham"></div><br>Soham Khadtare</div>
+  </div>
+
+  <div class="title">Developers</div>
+  <div class="section">
+    <div class="sub-dev floating"><div class="pic" id="mrunmayi"></div><br>Mrunmayi Mungekar</div>
+    <div class="sub-dev floating"><div class="pic" id="owais"></div><br>Owais Chunawala</div>
+    <div class="sub-dev floating"><div class="pic" id="hrushikesh"></div><br>Hrushikesh Bodas</div>
+    <div class="sub-dev floating"><div class="pic" id="yashkhem"></div><br>Yash Khemchandani</div>
+    <div class="sub-dev floating"><div class="pic" id="bavish"></div><br>Bavish Kulur</div>
+    <div class="sub-dev floating"><div class="pic" id="mayu"></div><br>Mayuresh Bhattu</div>
+  </div>
+
+  <div class="title">Testing</div>
+  <div class="section">
+    <div class="sub-dev floating"><div class="pic" id="tty"></div><br>tty0</div>
+  </div>
+
+  <div class="title">Join Us</div>
+  <div class="section">
+    <a href="https://github.com/wncc/IITBapp" target="_blank">Django API</a><br>
+    <a href="https://github.com/wncc/InstiApp" target="_blank">Android App</a><br>
+    <a href="https://github.com/pulsejet/iitb-app-angular" target="_blank">Angular PWA</a><br><br>
+  </div>
+</div>
