Shift bodies in user details

--- a/src/app/user-details/user-details.component.html
+++ b/src/app/user-details/user-details.component.html
@@ -20,8 +20,9 @@
                   [body]="role.body_detail"
                   [subtitle]="role.name">
     </app-body-card>
-    <mat-divider></mat-divider>
   </div>
+
+  <mat-divider *ngIf="profile.roles.length > 0"></mat-divider>
 
   <br>
 
