Add alumni to about page

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -85,7 +85,6 @@ td, div {
 #varun { background-image: url("https://insti.app/team-pics/varun.jpg") }
 #sajal { background-image: url("https://insti.app/team-pics/sajal.jpg"); }
 
-#tomar { background-image: url("https://insti.app/team-pics/tomar.jpg"); }
 #nihal { background-image: url("https://insti.app/team-pics/nihal.jpg"); }
 #ydidwania { background-image: url("https://insti.app/team-pics/ydidwania.jpg"); }
 #cheeku { background-image: url("https://insti.app/team-pics/cheeku.jpg"); }
@@ -99,5 +98,11 @@ td, div {
 #yashkhem { background-image: url("https://insti.app/team-pics/yashkhem.jpg"); }
 #bavish { background-image: url("https://insti.app/team-pics/bavish.jpg"); }
 #mayu { background-image: url("https://insti.app/team-pics/mayu.jpg"); }
+
+#tomar { background-image: url("https://insti.app/team-pics/tomar.jpg"); }
+#bijoy { background-image: url("https://insti.app/team-pics/bijoy.jpg"); }
+#dheerendra { background-image: url("https://insti.app/team-pics/dheerendra.jpg"); }
+#amangour { background-image: url("https://insti.app/team-pics/amangour.jpg"); }
+#ranveer { background-image: url("https://insti.app/team-pics/ranveer.jpg"); }
 
 #tty { background-image: url("https://insti.app/team-pics/wncc.jpg"); }
