--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -14,7 +14,6 @@
 
   <div class="title">Ideation</div>
   <div class="section">
-    <div class="sub-dev floating"><div class="pic" id="tomar"></div><br>Abhijit Tomar</div>
     <div class="sub-dev floating"><div class="pic" id="nihal"></div><br>Nihal Singh</div>
     <div class="sub-dev floating"><div class="pic" id="ydidwania"></div><br>Yashvardhan Didwania</div>
     <div class="sub-dev floating"><div class="pic" id="cheeku"></div><br>Kumar Ayush</div>
@@ -34,6 +33,15 @@
     <div class="sub-dev floating"><div class="pic" id="yashkhem"></div><br>Yash Khemchandani</div>
     <div class="sub-dev floating"><div class="pic" id="bavish"></div><br>Bavish Kulur</div>
     <div class="sub-dev floating"><div class="pic" id="mayu"></div><br>Mayuresh Bhattu</div>
+  </div>
+
+  <div class="title">Alumni</div>
+  <div class="section">
+    <div class="sub-dev floating"><div class="pic" id="tomar"></div><br>Abhijit Tomar</div>
+    <div class="sub-dev floating"><div class="pic" id="bijoy"></div><br>Bijoy Singh Kochar</div>
+    <div class="sub-dev floating"><div class="pic" id="dheerendra"></div><br>Dheerendra Rathor</div>
+    <div class="sub-dev floating"><div class="pic" id="ranveer"></div><br>Ranveer Aggarwal</div>
+    <div class="sub-dev floating"><div class="pic" id="amangour"></div><br>Aman Gour</div>
   </div>
 
   <div class="title">Testing</div>
